# ANDRITZ

./: Anopm_Detection.ipynb  DAGM.ipynb  DAQ.ipynb  Gui-Andritz.ipynb  Gui-Andritz_1.ipynb  LICENSE  NOTICE.md  README.md  SHelpers.py  default_gui.cfg  pyproject.toml  requirements.txt
.ipynb_checkpoints/: DAGM-checkpoint.ipynb  Files_Folders_tracker-checkpoint.ipynb  Gui-Andritz-checkpoint.ipynb  Gui-Andritz_1-checkpoint.ipynb  ResNet_anom_detection-checkpoint.ipynb  SHelpers-checkpoint.py
Andritz_GUI/: Andritz_GUI.slnx  UpgradeLog.htm  UpgradeLog7.htm
Andritz_GUI/Andritz_GUI/: Andritz_GUI.pyproj  SHelpers.py  VS_Andritz_GUI.py  default_gui.cfg
Andritz_GUI/Andritz_GUI/Notebooks/: SDE_modelling.ipynb
Andritz_GUI/Andritz_GUI/gui_files/: config.py  empa_gui.py  empa_gui.ui
Andritz_GUI/Andritz_GUI/mod/: Gui-Andritz.ipynb  SHelpers.py  mod_exceptions.py  mod_gui_logger_bpp_lines.py  (+3 more)
Debugging_scripts/: DataPreprocessing class.ipynb
Debugging_scripts/.ipynb_checkpoints/: DAGM-checkpoint.ipynb  Files_Folders_tracker-checkpoint.ipynb  Gui-Andritz-checkpoint.ipynb  Untitled-checkpoint.ipynb
gui_files/: empa_gui.py  empa_gui.ui  main_gui.py
mod/: mod_autoencoder.py  mod_gui_data_loader_bpp_lines.py  mod_gui_feature_extractor_bpp_lines.py
mod/.ipynb_checkpoints/: SHelpers-checkpoint.py
runs/Dec29_16-52-23_THM08177-Run(init_lr=0.05, batch_size=256, weight_decay=0.001)/: events.out.tfevents.1767023543.THM08177.71912.1
runs/Dec29_16-53-06_THM08177-Run(init_lr=0.05, batch_size=256, weight_decay=0.001)/: events.out.tfevents.1767023586.THM08177.71912.2
(+3 files in other folders)
