[tool.poetry]
name = "Empa GUI for monitoring of welding of BPPs"
version = "0.1.0"
description = "Anomaly detection for the identification of welding defects from optical signals."
authors = ["Nicola Nesa <nicola.nesa@empa.ch>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.*"
pandas = "^2.2"
numpy = "^1.26"
openpyxl = "^3.1"
datetime = "^5.5"
ipywidgets = "^8.1.5"
ipykernel = "^6.29"
seaborn = "^0.13.2"
shap = "^0.46.0"
matplotlib = "^3.9.3"
nbformat = "^5.10.4"
nbconvert = "^7.16.4"
xgboost = "^2.1.3"
torch = "^2.5.1"
jupyter = "^1.1.1"
scipy = "^1.15.3"
librosa = "^0.11.0"
scikit-learn = "^1.7.2"
pyside6 = "^6.9.3"
joblib = "^1.5.2"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
